crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F822_F822_1.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
---
./resources/test/fixtures/pyflakes/F822_1.py:3:1: F822 Undefined name `b` in `__all__`
  |
3 | a = 1
4 | 
5 | __all__ = list(["a", "b"])
  | ^^^^^^^ F822
  |


