crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F823_F823.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
expression: diagnostics
---
- - kind:
      name: UndefinedLocal
      body: "Local variable `my_var` referenced before assignment"
      suggestion: ~
      fixable: false
    location:
      row: 6
      column: 4
    end_location:
      row: 6
      column: 10
    fix: ~
    parent: ~

