crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F842_F842.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
---
./resources/test/fixtures/pyflakes/F842.py:2:5: F842 Local variable `name` is annotated but never used
  |
2 | def f():
3 |     name: str
  |     ^^^^ F842
4 |     age: int
  |

./resources/test/fixtures/pyflakes/F842.py:3:5: F842 Local variable `age` is annotated but never used
  |
3 | def f():
4 |     name: str
5 |     age: int
  |     ^^^ F842
  |


