crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F901_F901.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    name: RaiseNotImplemented
    body: "`raise NotImplemented` should be `raise NotImplementedError`"
    suggestion: "Use `raise NotImplementedError`"
    fixable: true
  location:
    row: 2
    column: 10
  end_location:
    row: 2
    column: 24
  fix:
    edits:
      - location:
          row: 2
          column: 10
        end_location:
          row: 2
          column: 24
        content: NotImplementedError
  parent: ~
- kind:
    name: RaiseNotImplemented
    body: "`raise NotImplemented` should be `raise NotImplementedError`"
    suggestion: "Use `raise NotImplementedError`"
    fixable: true
  location:
    row: 6
    column: 10
  end_location:
    row: 6
    column: 24
  fix:
    edits:
      - location:
          row: 6
          column: 10
        end_location:
          row: 6
          column: 24
        content: NotImplementedError
  parent: ~

