crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__default_builtins.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    name: UndefinedName
    body: "Undefined name `_`"
    commit: ~
    fixable: false
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 1
  fix: ~
  parent: ~

