crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__default_typing_modules.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
expression: diagnostics
---
- - kind:
      name: UndefinedName
      body: "Undefined name `db`"
      suggestion: ~
      fixable: false
    location:
      row: 6
      column: 34
    end_location:
      row: 6
      column: 38
    fix: ~
    parent: ~

