crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__del_shadowed_global_import_in_global_scope.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
---
<filename>:5:12: F401 [*] `os` imported but unused
  |
5 | def f():
6 |     import os
  |            ^^ F401
7 | 
8 | # Despite this `del`, `import os` in `f` should still be flagged as shadowing an unused
  |
  = help: Remove unused import: `os`

ℹ Fix
2 2 | import os
3 3 | 
4 4 | def f():
5   |-    import os
  5 |+    pass
6 6 | 
7 7 | # Despite this `del`, `import os` in `f` should still be flagged as shadowing an unused
8 8 | # import. (This is a false negative, but is consistent with Pyflakes.)


