crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__del_shadowed_global_import_in_local_scope.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
---
<filename>:2:8: F401 [*] `os` imported but unused
  |
2 | import os
  |        ^^ F401
3 | 
4 | def f():
  |
  = help: Remove unused import: `os`

ℹ Fix
1 1 | 
2   |-import os
3 2 | 
4 3 | def f():
5 4 |     import os


