crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__del_shadowed_local_import_in_local_scope.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
---
<filename>:4:12: F811 Redefinition of unused `os` from line 3
  |
4 | def f():
5 |     import os
6 |     import os
  |            ^^ F811
7 | 
8 |     # Despite this `del`, `import os` should still be flagged as shadowing an unused
  |


