crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__double_del.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
---
<filename>:5:9: F821 Undefined name `x`
  |
3 |     x = 1
4 |     del x
5 |     del x
  |         ^ F821
  |


